src/test/deca/codegen/valid/multiplication.deca
// Description:
//    test multiplication
//
// Resultats:
//  2
//
// Historique:
//    cree le 13/01/2017
{
int x = 1;
x = x * 2;
print(x);
}
