src/test/deca/codegen/invalid/NoInitFoisNoInit_f.deca
// Description:
//    soustraction sans initialisation
//
// Resultats:
//  Erreur
//
// Historique:
//    cree le 13/01/2017
{
float x;
float y;
print(y * x);
}
